--- a/technokraft/index.html
+++ b/technokraft/index.html
@@ -293,16 +293,24 @@
 		</section>
 
 		<section id="about" class=" about-section main-section">
-			<div class="container">
-				<div class="row text-center">
-					<div class="col-12">
-						<p>ABOUT</p>
+			<!--First section-->
+			<div class="row">
+				<div class="container-fluid">
+					<div class="col backGroundImage">
+						<div class="text-center">
+							<h3>ABOUT</h3>
+							<h1>TECHNOKRAFT</h1>
+							<p>If you have a problem with your car, we'll quickly and effectively eliminate the problem, perform all work connected with the repair of your vehicle, efficiently and inexpensive. We are ready to provide you with a full range of services for warranty and post-warranty maintenance and repair of any car.</p>
+						</div>
+					</div>
+					<div class="col text-center">
+						<h2>CAR MANUFACTURERS</h2>
+						<h1>WE WORK WITH</h1>
 					</div>
 					<div class="col-12">
-						<p>TECHNOKRAFT</p>
+						<img src="https://mdbootstrap.com/img/Photos/Slides/img%20(84).jpg" class="img-fluid" alt="Responsive image">
 					</div>
 				</div>
-			</div>
 		</section>
 
 		<section id="desc" class="bg-info desc-section main-section">
